--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POS Business Tools | Digital Growth Ecosystem</title>
+    <title>POS Business Tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -13,45 +13,28 @@
             background-color: #0a0a0a;
             color: #ffffff;
         }
-        .neon-glow {
-            box-shadow: 0 0 15px rgba(57, 255, 20, 0.3);
+        .neon-text {
+            color: #39FF14;
         }
         .neon-border {
             border: 1px solid rgba(57, 255, 20, 0.4);
         }
-        .neon-text {
-            color: #39FF14;
-        }
-        .neon-bg {
-            background-color: #39FF14;
-        }
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #0a0a0a;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #1a1a1a;
-            border-radius: 4px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #39FF14;
-        }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
 </head>
-<body>
-    <div id="root"></div>
+
+<body class="min-h-screen flex flex-col items-center justify-center text-center px-6">
+
+    <h1 class="text-4xl md:text-5xl font-extrabold neon-text mb-6">
+        POS Business Tools
+    </h1>
+
+    <p class="text-lg md:text-xl text-gray-300 max-w-xl mb-10">
+        Simple, powerful tools to help you organize, plan, and grow using exactly what you already have.
+    </p>
+
+    <a href="#" class="px-6 py-3 neon-border rounded-lg text-gray-200 hover:text-black hover:bg-[#39FF14] transition">
+        Explore Tools
+    </a>
+
 </body>
 </html>
