--- a/index.html
+++ b/index.html
@@ -6,33 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POS Business Tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #0a0a0a;
+            background-color: #000000;
             color: #ffffff;
         }
         .neon-text {
             color: #39FF14;
+            text-shadow: 0 0 12px rgba(57, 255, 20, 0.7);
         }
         .neon-border {
-            border: 1px solid rgba(57, 255, 20, 0.4);
+            border: 2px solid rgba(57, 255, 20, 0.6);
+            box-shadow: 0 0 15px rgba(57, 255, 20, 0.4);
         }
     </style>
 </head>
 
 <body class="min-h-screen flex flex-col items-center justify-center text-center px-6">
 
-    <h1 class="text-4xl md:text-5xl font-extrabold neon-text mb-6">
+    <h1 class="text-5xl md:text-7xl font-extrabold neon-text mb-8 leading-tight">
         POS Business Tools
     </h1>
 
-    <p class="text-lg md:text-xl text-gray-300 max-w-xl mb-10">
-        Simple, powerful tools to help you organize, plan, and grow using exactly what you already have.
+    <p class="text-xl md:text-2xl text-gray-300 max-w-2xl mb-12">
+        A clean, powerful ecosystem of digital tools designed to help you organize, plan, and grow — using exactly what you already have.
     </p>
 
-    <a href="#" class="px-6 py-3 neon-border rounded-lg text-gray-200 hover:text-black hover:bg-[#39FF14] transition">
+    <a href="#" class="px-8 py-4 neon-border rounded-xl text-lg md:text-xl font-semibold hover:bg-[#39FF14] hover:text-black transition-all duration-300">
         Explore Tools
     </a>
 
