--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POS Business Tools</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+    setTimeout(() => setCopied(false), 2000);
+  };
+import React, { useEffect, useState } from 'react';
+import { NAV_LINKS, DIVISIONS } from './constants.tsx';
+import Assistant from './components/Assistant.tsx';
+import Logo from './components/Logo.tsx';
+import PropertyReset from './pages/PropertyReset.tsx';
+import SparkShield from './pages/SparkShield.tsx';
+import ToolsHub from './pages/ToolsHub.tsx';
+import DigitalProducts from './pages/DigitalProducts.tsx';
+import POSFight from './pages/POSFight.tsx';
+import { AppView } from './types.ts';
 
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #000000;
-            color: #ffffff;
-        }
-        .neon-text {
-            color: #39FF14;
-            text-shadow: 0 0 12px rgba(57, 255, 20, 0.7);
-        }
-        .neon-border {
-            border: 2px solid rgba(57, 255, 20, 0.6);
-            box-shadow: 0 0 15px rgba(57, 255, 20, 0.4);
-        }
-    </style>
-</head>
 
-<body class="min-h-screen flex flex-col items-center justify-center text-center px-6">
+export default function App() {
+  const [currentView, setCurrentView] = useState<AppView>('hud');
+  const [copied, setCopied] = useState(false);
+  const contactEmail = "posolutions+percision25@gmail.com";
+  const mailtoLink = `mailto:${contactEmail}?subject=Inquiry - Point On Solutions`;
 
-    <h1 class="text-5xl md:text-7xl font-extrabold neon-text mb-8 leading-tight">
-        POS Business Tools
-    </h1>
 
-    <p class="text-xl md:text-2xl text-gray-300 max-w-2xl mb-12">
-        A clean, powerful ecosystem of digital tools designed to help you organize, plan, and grow — using exactly what you already have.
-    </p>
+  useEffect(() => {
+    window.scrollTo(0, 0);
+  }, [currentView]);
 
-    <a href="#" class="px-8 py-4 neon-border rounded-xl text-lg md:text-xl font-semibold hover:bg-[#39FF14] hover:text-black transition-all duration-300">
-        Explore Tools
-    </a>
 
-</body>
-</html>
+  const handleCopy = () => {
+    navigator.clipboard.writeText(contactEmail);
+    setCopied(true);
+
+
+  const renderView = () => {
+    switch (currentView) {
+      case 'property-reset': return <PropertyReset onBack={() => setCurrentView('hud')} />;
+      case 'spark-shield': return <SparkShield onBack={() => setCurrentView('hud')} />;
+      case 'tools-hub': return <ToolsHub onBack={() => setCurrentView('hud')} />;
+      case 'digital-products': return <DigitalProducts onBack={() => setCurrentView('hud')} />;
+      case 'pos-fight': return <POSFight onBack={() => setCurrentView('hud')} />;
+      default: return null;
+    }
+  };
+
+
+  if (currentView !== 'hud') {
+    return renderView();
+  }
+
+
+  return (
